baseline font-family

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,4 +2,20 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-variant-numeric: tabular-nums;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Helvetica Neue",
+    Helvetica,
+    Arial,
+    "Hiragino Sans GB",
+    "Segoe UI",
+    "Microsoft YaHei",
+    "WenQuanYi Micro Hei",
+    sans-serif,
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol",
+    "Noto Color Emoji";
 }
