--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,8 +1,7 @@
 ---
 import { ViewTransitions } from "astro:transitions"
 import AppHeader from "~components/AppHeader.astro"
-
-const pageTitle: string = "astro-theme-resume"
+import "~styles/index.css"
 ---
 
 <html lang="en">
@@ -10,33 +9,14 @@ const pageTitle: string = "astro-theme-resume"
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
+    <title>astro-theme-resume</title>
     <ViewTransitions />
-    <script type="module" is:inline>
-      const themeKey = "theme"
-      const darkClass = "dark"
-      const docEl = document.documentElement
-      const matchMediaListDark = window.matchMedia("(prefers-color-scheme: dark)")
-
-      if (
-        localStorage.getItem(themeKey) === darkClass ||
-        (localStorage.getItem(themeKey) === null && matchMediaListDark.matches)
-      ) {
-        docEl.classList.add(darkClass)
-      } else {
-        docEl.classList.remove(darkClass)
-      }
-    </script>
+    <script src="./setDarkClass.ts"></script>
   </head>
 
   <body>
-    <button id="btn">dark</button>
-    <a href="/astro-theme-resume/x">/x</a>
-    <a href="/astro-theme-resume/y">/y</a>
     <AppHeader />
 
-    <main>
-      <slot />
-    </main>
+    <slot />
   </body>
 </html>
