update Base layout

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -2,21 +2,25 @@
 import { ViewTransitions } from "astro:transitions"
 import AppHeader from "~components/AppHeader.astro"
 import "~styles/index.css"
+
+const title: string = "astro-theme-resume"
+const description: string = "A simple resume template built with astro."
 ---
 
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta name="generator" content={Astro.generator} />
-    <title>astro-theme-resume</title>
-    <ViewTransitions />
-    <script src="./setDarkClass.ts"></script>
-  </head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta name="generator" content={Astro.generator} />
+  <title>{title}</title>
+  <meta name="title" content={title} />
+  <meta name="description" content={description} />
+  <ViewTransitions />
 
   <body>
     <AppHeader />
 
     <slot />
+
+    <script src="./setDarkClass.ts"></script>
   </body>
 </html>
