--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -1,4 +1,9 @@
-<header class="flex">
-  <!-- TODO: change href for production -->
-  <a href="/astro-theme-resume">resume</a>
+<header class=":uno: flex justify-between">
+  <!-- home nav -->
+  <a class=":uno: px-4 text-lg leading-14 lowercase" href={import.meta.env.BASE_URL}>resume</a>
+
+  <!-- hamburger -->
+  <button class=":uno: h-14 w-14 flex items-center justify-center p-4">
+    <i class=":uno: text-2xl" class:list={["i-material-symbols:menu-rounded"]}></i>
+  </button>
 </header>
