change global selector from body to html & :host

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,5 @@
-body {
+html,
+:host {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-variant-numeric: tabular-nums;
