fix profile text line-height

--- a/src/pages/index/profile.astro
+++ b/src/pages/index/profile.astro
@@ -24,7 +24,7 @@ const socials: ISocial[] = [
 
   <!-- Description -->
   <p class="mt-4 text-base">
-    I am the creator of
+    <span class="inline-block">I am the creator of</span>
     <span class="inline-flex">
       <AppLink href="https://github.com/yurikong/astro-theme-resume">astro-theme-resume-minimalist</AppLink>
       .
