remove padding-inline from socials

--- a/src/pages/index/profile.astro
+++ b/src/pages/index/profile.astro
@@ -32,7 +32,7 @@ const socials: ISocial[] = [
   </p>
 
   <!-- Social Contacts -->
-  <ul class="mt-8 flex items-center gap-5 px-2 text-2xl leading-none">
+  <ul class="mt-8 flex items-center gap-5 text-2xl leading-none">
     {
       socials.map((it) => (
         <li>
