hoist section from Profile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -76,7 +76,10 @@ workList.sort(mostRecentYearComparator)
 ---
 
 <BaseLayout>
-  <Profile />
+  <!-- Profile -->
+  <section>
+    <Profile />
+  </section>
 
   <!-- Education -->
   <section class="mt-36">
