--- a/src/pages/index/profile.astro
+++ b/src/pages/index/profile.astro
@@ -13,7 +13,7 @@ const socials: ISocial[] = [
 ]
 ---
 
-<section>
+<div>
   <!-- Name -->
   <h1 class="text-4xl font-semibold tracking-tight capitalize">
     <AppLink href="https://yurikong.github.io">jianqiang du</AppLink>
@@ -41,4 +41,4 @@ const socials: ISocial[] = [
       ))
     }
   </ul>
-</section>
+</div>
