add margin-top to Profile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -77,7 +77,7 @@ workList.sort(mostRecentYearComparator)
 
 <BaseLayout>
   <!-- Profile -->
-  <section>
+  <section class="mt-18">
     <Profile />
   </section>
 
