--- a/src/pages/index/education.astro
+++ b/src/pages/index/education.astro
@@ -11,7 +11,7 @@ const { university, degree, major, GPA, startYear, endYear, href } = Astro.props
 <div>
   <!-- Appended Years -->
   <div class="py-2 text-xs font-semibold tracking-wide uppercase">
-    {startYear} — {endYear ?? "Present"}
+    {startYear}{startYear !== endYear && <span> — {endYear ?? "Present"}</span>}
   </div>
 
   <div>
