--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,11 @@
 import BaseLayout from "~layouts/BaseLayout.astro"
 import Profile from "./index/profile.astro"
 import Education from "./index/education.astro"
-import type { IEducation } from "~types/education"
 import Work from "./index/work.astro"
+import Project from "./index/project.astro"
+import type { IEducation } from "~types/education"
 import type { IWork } from "~types/work"
-import Projects from "./index/projects.astro"
+import type { IProject } from "~types/project"
 import { mostRecentYearComparator } from "~utils/comparator"
 import AppLink from "~components/AppLink.astro"
 
@@ -73,6 +74,29 @@ const workList: IWork[] = [
   },
 ]
 workList.sort(mostRecentYearComparator)
+
+const projectList: IProject[] = [
+  {
+    name: "Astro Theme Resume Minimalist",
+    description: "An open-sourced minimalistic resume template built with Astro.",
+    technologiesUsed: ["Astro", "Typescript", "Unocss", "HTML & CSS", "Github Pages"],
+    preview: "",
+    startYear: 2024,
+    endYear: 2024,
+    href: "#",
+  },
+  {
+    name: "Certificate of Analysis Generator",
+    description:
+      "Desktop app for generating Certificate of Analysis with a few clicks in an analytical testing laboratory.",
+    technologiesUsed: ["Flutter"],
+    preview: "",
+    startYear: 2023,
+    endYear: 2023,
+    href: "#",
+  },
+]
+projectList.sort(mostRecentYearComparator)
 ---
 
 <BaseLayout>
@@ -116,6 +140,15 @@ workList.sort(mostRecentYearComparator)
 
   <!-- Projects -->
   <section class="mt-36">
-    <Projects />
+    <h2 class="mb-4 py-5 text-sm font-semibold tracking-widest uppercase">projects</h2>
+    <ul>
+      {
+        projectList.map((it) => (
+          <li class="mb-16 last-of-type:mb-0">
+            <Project {...it} />
+          </li>
+        ))
+      }
+    </ul>
   </section>
 </BaseLayout>
