add link to view all projects

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -134,7 +134,7 @@ projectList.sort(mostRecentYearComparator)
 
     <!-- View Full Resume -->
     <div class="mt-16">
-      <AppLink class="capitalize" href="#" showSuffixIcon>view full resume</AppLink>
+      <AppLink class="capitalize" href="#" showSuffixIcon title="Resume">view full resume</AppLink>
     </div>
   </section>
 
@@ -150,5 +150,10 @@ projectList.sort(mostRecentYearComparator)
         ))
       }
     </ul>
+
+    <!-- View All Projects -->
+    <div class="mt-16">
+      <AppLink class="capitalize" href="#" showSuffixIcon title="Projects">view all projects</AppLink>
+    </div>
   </section>
 </BaseLayout>
