update display texts

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,7 +5,7 @@ import AppFooter from "~components/AppFooter.astro"
 import "~styles/index.css"
 
 const title: string = "astro-theme-resume-minimalist"
-const description: string = "A minimalistic astro resume."
+const description: string = "A minimal astro resume site template."
 ---
 
 <html lang="en">
