--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,7 +78,7 @@ workList.sort(mostRecentYearComparator)
 const projectList: IProject[] = [
   {
     name: "Astro Theme Resume Minimalist",
-    description: "An open-sourced minimalistic resume template built with Astro.",
+    description: "An open-sourced minimal resume site template built with Astro.",
     technologiesUsed: ["Astro", "Typescript", "Unocss", "HTML & CSS", "Github Pages"],
     preview: "",
     startYear: 2024,
