--- a/src/pages/index/profile.astro
+++ b/src/pages/index/profile.astro
@@ -26,7 +26,11 @@ const socials: ISocial[] = [
   <p class="mt-6 text-base">
     <span class="inline-block">I am the creator of</span>
     <span class="inline-flex">
-      <AppLink href="https://github.com/yurikong/astro-theme-resume" showSuffixIcon title="Project Repository">
+      <AppLink
+        href="https://github.com/yurikong/astro-theme-resume-minimalist"
+        showSuffixIcon
+        title="Project Repository"
+      >
         Astro Theme Resume Minimalist
       </AppLink>
       .
