update doc title

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,7 +4,7 @@ import AppHeader from "~components/AppHeader.astro"
 import AppFooter from "~components/AppFooter.astro"
 import "~styles/index.css"
 
-const title: string = "astro-theme-resume-minimalist"
+const title: string = "Astro Theme Resume Minimalist — Jianqiang Du"
 const description: string = "A minimal astro resume site template."
 ---
 
